Fix display on small screens and mobile

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -26,7 +26,7 @@ a {
 img#tutors {
     position: absolute;
     width: 65vw;
-    height: 100vh;
+    height: 100%;
 }
 
 /* UofA logo */
@@ -40,7 +40,8 @@ img#UofA {
 #login-display {
     position: absolute;
     width: 35vw;
-    height: 100vh;
+    min-height: 100vh;
+    max-height: fit-content;
     right: 31.5vw;
     text-align: center;
     font-family: monospace;
